ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: twelve-per-min
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 80
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 80
      - path: /queservice
        pathType: Prefix
        backend:
          service:
            name: quetaskapiservice
            port:
              number: 80
      - path: /queconsume
        pathType: Prefix
        backend:
          service:
            name: consumetaskapiservice2
            port:
              number: 80
